--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="20dp"
@@ -12,12 +12,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:background="#805F5F5F">
+            android:background="#3E3B3B">
 
             <ImageView
                 android:id="@+id/img_item_photo"
                 android:layout_width="70dp"
-                android:layout_height="match_parent"
+                android:layout_height="70dp"
                 android:layout_marginEnd="10dp"
                 tools:src="@tools:sample/avatars" />
 
