--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#191414</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="Green">#1DB954</color>
+    <color name="lightGreen">#80CE9C</color>
 </resources>
