--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,225 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Theme.AppCompat.DayNight.NoActionBar"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:orientation="vertical"
-    tools:context="com.thaariq.MusicPlayerApp.MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/sf_pro_bold"
-        android:text="@string/greeting"
-        android:textColor="@color/white"
-        android:textSize="24sp" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        android:background="@color/BottomNavColor"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        android:layout_marginTop="10dp"/>
 
-    <GridLayout
-        android:id="@+id/gl_top"
+    <fragment
+        android:id="@+id/nav_host_fragment_activity_main"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:columnCount="3"
-        android:orientation="vertical"
-        android:layout_marginHorizontal="20dp">
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation" />
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="182dp"
-            android:layout_height="50dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:backgroundTint="#3E3B3B">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/mishary"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/sf_pro_bold"
-                android:textSize="12sp"
-                android:text="Mishary Rashid"
-                android:textColor="@color/white"
-                android:layout_marginLeft="8dp"
-                android:layout_marginVertical="13dp"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="182dp"
-            android:layout_height="50dp"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="#3E3B3B">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/taha"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sf_pro_bold"
-                    android:textSize="12sp"
-                    android:text="Taha Al Junayd"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginVertical="13dp"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="182dp"
-            android:layout_height="50dp"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="#3E3B3B">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/muzammil"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sf_pro_bold"
-                    android:textSize="12sp"
-                    android:text="Muzammil Hasballah"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginVertical="13dp"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="182dp"
-            android:layout_height="50dp"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_marginStart="8dp"
-            android:backgroundTint="#3E3B3B">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/yasser"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sf_pro_bold"
-                    android:textSize="12sp"
-                    android:text="Yasser Al Dosary"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginVertical="13dp"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="182dp"
-            android:layout_height="50dp"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="#3E3B3B">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/abdurrahman"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sf_pro_bold"
-                    android:textSize="11sp"
-                    android:text="Abdurrahman Al Ossy"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginVertical="14dp"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="182dp"
-            android:layout_height="50dp"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="#3E3B3B">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/fatih"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sf_pro_bold"
-                    android:textSize="12sp"
-                    android:text="Fatih Seferagic"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginVertical="13dp"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </GridLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/sf_pro_bold"
-        android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        android:text="Recently Played"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_music_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        tools:listitem="@layout/row_item" />
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
