--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="20dp"
-    android:layout_marginTop="15dp"
+    android:layout_marginVertical="7dp"
     app:cardCornerRadius="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:background="#3E3B3B">
+            android:background="@color/secondary">
 
             <ImageView
                 android:id="@+id/img_item_photo"
@@ -30,7 +30,7 @@
                 <TextView
                     android:id="@+id/tv_item_name"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="22dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:text="@string/musicname"
@@ -40,7 +40,8 @@
                 <TextView
                     android:id="@+id/tv_item_detail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="2dp"
                     tools:text="@string/musicalbum"
                     android:textColor="@color/white"
                     android:fontFamily="@font/sf_pro_regular"/>
