--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,19 +4,16 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home"
-        android:title="@string/txt_home"
-        android:iconTint="@color/white" />
+        android:title="@string/txt_home" />
 
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_search"
-        android:title="@string/txt_search"
-        android:iconTint="@color/white"/>
+        android:title="@string/txt_search" />
 
     <item
         android:id="@+id/navigation_library"
         android:icon="@drawable/ic_library"
-        android:title="@string/txt_library"
-        android:iconTint="@color/white"/>
+        android:title="@string/txt_library" />
 
 </menu>
